--- a/package.json
+++ b/package.json
@@ -4,5 +4,31 @@
   "main": "index.js",
   "repository": "git@github.com:xheartx/happymmall-admin.git",
   "author": "X.Heart <xiaoxin.wang@xinhuajindian.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "node_modules/.bin/webpack-dev-server",
+    "dist": "node_modules/.bin/webpack",
+    "build": "node_modules/.bin/webpack -p"
+  },
+  "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "2.30.1",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "^2.9.7"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  }
 }
