--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-router-dom": "4.2.2"
   }
 }
