--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rc-pagination": "1.16.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-fileupload": "2.4.0",
     "react-router-dom": "4.2.2"
   }
 }
